Fixed display information and images.

--- a/src/main/resources/es/udc/pa/pa013/practicapa/web/components/Layout_en.properties
+++ b/src/main/resources/es/udc/pa/pa013/practicapa/web/components/Layout_en.properties
@@ -1,5 +1,4 @@
-footer=Martin Software Engineering - University of A Coruña - 
-contact=martin11lrx@tendereteonline.es - 
+footer=- University of A Coruña -
 header=Tenderete Online: A Sample POJO Web Application with Tapestry+Spring+Hibernate+Bootstrap+jQuery
 menu-authenticate=Authenticate
 menu-hello=Hello
