--- a/src/main/resources/es/udc/pa/pa013/practicapa/web/components/Layout_es.properties
+++ b/src/main/resources/es/udc/pa/pa013/practicapa/web/components/Layout_es.properties
@@ -1,5 +1,4 @@
-footer=Martin Software Engineering - University of A Coruña - 
-contact=martin11lrx@tendereteonline.es - 
+footer=- Universidad de A Coruña -
 header=Tenderete Online: Una Aplicación Web de ejemplo con Tapestry+Spring+Hibernate+Bootstrap+jQuery
 menu-authenticate=Authenticarse
 menu-hello=Hola
