--- a/src/main/resources/es/udc/pa/pa013/practicapa/web/components/Layout_gl.properties
+++ b/src/main/resources/es/udc/pa/pa013/practicapa/web/components/Layout_gl.properties
@@ -1,5 +1,4 @@
-footer=Martin Software Engineering - University of A Coruña - 
-contact=martin11lrx@tendereteonline.es - 
+footer=- Universidade de A Coruña -
 header=Tenderete Online: Unha Aplicazón Web de exemplo con Tapestry+Spring+Hibernate+Bootstrap+jQuery
 menu-authenticate=Authenticarse
 menu-hello=Hola
