--- a/src/main/resources/es/udc/pa/pa013/practicapa/web/pages/Index_en.properties
+++ b/src/main/resources/es/udc/pa/pa013/practicapa/web/pages/Index_en.properties
@@ -6,4 +6,5 @@ keywords=Keywords
 category=Category
 submit=Find
 info=WARNING: The present Web Application is not a real web store. Its purpose is show the programing abilities of
-name=Martín Montes Pérez
+name1=Martín Montes Pérez
+name2=Iago Veloso Abalo
