--- a/src/main/resources/es/udc/pa/pa013/practicapa/web/pages/Index_es.properties
+++ b/src/main/resources/es/udc/pa/pa013/practicapa/web/pages/Index_es.properties
@@ -6,4 +6,5 @@ keywords=Palabras Clave
 category=Categoría
 submit=Buscar
 info=ATENCION: Esta Aplicación Web no es una tienda online real. Su propósito es mostrar las habilidades de programación de 
-name=Martín Montes Pérez
+name1=Martín Montes Pérez
+name2=Iago Veloso Abalo
