--- a/src/main/resources/es/udc/pa/pa013/practicapa/web/pages/Index_gl.properties
+++ b/src/main/resources/es/udc/pa/pa013/practicapa/web/pages/Index_gl.properties
@@ -6,4 +6,5 @@ keywords=Palabras Chave
 category=Categoría
 submit=Buscar
 info=ATENCION: Esta Aplicazón Web non é una tenda online real. O seu propósito é mostrar as habilidades de programación de 
-name=Martín Montes Pérez
+name1=Martín Montes Pérez
+name2=Iago Veloso Abalo
